--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
     font-family: "Orbitron", sans-serif;
     background-image: url(https://images.unsplash.com/photo-1485288734756-0b31a0a31d95?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
     background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 h2 {
